# IMAS-MUSCLE3

./: .gitignore  README.md  conftest.py  plot.py  pyproject.toml  setup.cfg  test_visualization.ymmsl
.github/workflows/: docs.yml  lint.yml  pytest.yml
ci/: build_docs.sh  run_pytest.sh
docs/source/: actor_accumulator.rst  actor_olc.rst  actor_sink_source.rst  actor_visualization.rst  api.rst  ci_config.rst  conf.py  index.rst  installing.rst  realise_imas.rst  release_imas.rst  tips_and_tricks.rst  training.rst  usage.rst
imas_m3/: data_sink_source.py  utils.py
imas_m3/actors/: accumulator_component.py  olc_component.py  sink_component.py
imas_muscle3/: __init__.py  data_sink_source.py  panel_visualization.py  utils.py
imas_muscle3/actors/: accumulator_component.py  olc_component.py  sink_source_component.py  source_component.py  visualization_component.py
imas_muscle3/visualization/: base.py  base_plotter.py  base_state.py  cli.py  interactive.py  resizable_float_panel.py  standalone.py  states.py  test.py  visualization_actor.py
imas_muscle3/visualization/examples/eq_and_pfa/: eq_and_pfa.py  eq_and_pfa.ymmsl
imas_muscle3/visualization/examples/eq_psi_map/: eq_psi_map.py  eq_psi_map.ymmsl
imas_muscle3/visualization/examples/interactive/: interactive.py  interactive.ymmsl
imas_muscle3/visualization/examples/machine_description/: machine_description.py  machine_description.ymmsl
imas_muscle3/visualization/examples/pds/: pds.py  pds.ymmsl
imas_muscle3/visualization/examples/simple_1d_plot/: simple_1d_plot.py  simple_1d_plot.ymmsl
olc_m3/: _version.py  olc_m3.py
test_configs/eq_and_pfa/: eq_and_pfa.py  eq_and_pfa.ymmsl
test_configs/eq_psi_map/: eq_psi_map.py  eq_psi_map.ymmsl
tests/: test_accumulator.py  test_data_sink_source.py  test_visualization.py
